[KOGITO-5887] Proto generation improvements: optional data index proto generation (#1631)
* Proto generation improvements: disable by default data-index proto generation and initial structure to allow json marshalling

* Minor

* Minor

* Refactor test to cover all options

* Fix formatting

* Minor

* Update PersistenceGenerator.java

* Implement test using fallback java serialization