@@ -15,9 +15,10 @@
  */
 package org.kie.kogito.it;
 
-import java.util.Collections;
+import java.util.Map;
 
 import org.junit.jupiter.api.Test;
+import org.kie.kogito.Person;
 
 import io.restassured.RestAssured;
 import io.restassured.http.ContentType;
@@ -39,9 +40,10 @@ public abstract class PersistenceTest {
 
     @Test
     void testPersistence() {
+        Person person = new Person("Name", 10);
         final String pid = given().contentType(ContentType.JSON)
                 .when()
-                .body(Collections.singletonMap("var1", "Tiago"))
+                .body(Map.of("var1", "Tiago", "person", person))
                 .post("/{processId}", PROCESS_ID)
                 .then()
                 .statusCode(201)
@@ -49,6 +51,8 @@ public abstract class PersistenceTest {
                 .body("id", not(emptyOrNullString()))
                 .body("var1", equalTo("Tiago"))
                 .body("var2", equalTo("Hello Tiago! Script"))
+                .body("person.name", equalTo(person.getName()))
+                .body("person.age", equalTo(person.getAge()))
                 .extract()
                 .path("id");
 
@@ -60,6 +64,8 @@ public abstract class PersistenceTest {
                 .body("id", not(emptyOrNullString()))
                 .body("var1", equalTo("Tiago"))
                 .body("var2", equalTo("Hello Tiago! Script"))
+                .body("person.name", equalTo(person.getName()))
+                .body("person.age", equalTo(person.getAge()))
                 .extract()
                 .path("id");
 
